finished endpoint to create new user
